--- a/trunk/trace_viewer/tracing/find_control.html
+++ b/trunk/trace_viewer/tracing/find_control.html
@@ -4,7 +4,9 @@ Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
+
 <link rel="import" href="/tracing/find_controller.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
 
 <template id="find-control-template">
   <style>
@@ -59,8 +61,6 @@ found in the LICENSE file.
 
 <script>
 'use strict';
-
-tvcm.require('tracing.timeline_track_view');
 
 /**
  * @fileoverview FindControl.
