--- a/trunk/trace_viewer/tracing/find_control_test.html
+++ b/trunk/trace_viewer/tracing/find_control_test.html
@@ -6,11 +6,10 @@ found in the LICENSE file.
 -->
 
 <link rel="import" href="/tracing/find_control.html">
+<link rel="import" href="/tracing/test_utils.html">
 
 <script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
 
 tvcm.unittest.testSuite('tracing.find_control_test', function() {
   test('instantiate', function() {
