--- a/trunk/trace_viewer/tracing/timeline_viewport_test.html
+++ b/trunk/trace_viewer/tracing/timeline_viewport_test.html
@@ -1,10 +1,14 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/timeline_viewport.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.timeline_viewport');
 
 tvcm.unittest.testSuite('tracing.timeline_viewport_test', function() {
   test('memoization', function() {
@@ -26,3 +30,5 @@ tvcm.unittest.testSuite('tracing.timeline_viewport_test', function() {
     assertEquals('track', vp.trackForEvent(slice));
   });
 });
+</script>
+
