--- a/trunk/trace_viewer/tracing/selection.html
+++ b/trunk/trace_viewer/tracing/selection.html
@@ -1,7 +1,13 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2012 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/trace_model.html">
+
+<script>
 'use strict';
 
 /**
@@ -12,7 +18,6 @@ tvcm.require('tvcm.guid');
 tvcm.require('tvcm.range');
 tvcm.require('tracing.trace_model.instant_event');
 tvcm.require('tracing.trace_model.flow_event');
-tvcm.require('tracing.trace_model');
 
 tvcm.exportTo('tracing', function() {
 
@@ -204,3 +209,5 @@ tvcm.exportTo('tracing', function() {
     RequestSelectionChangeEvent: RequestSelectionChangeEvent
   };
 });
+</script>
+
