--- a/trunk/trace_viewer/tracing/test_utils.html
+++ b/trunk/trace_viewer/tracing/test_utils.html
@@ -1,13 +1,16 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2012 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 /**
  * @fileoverview Helper functions for use in tracing tests.
  */
-'use strict';
 
 tvcm.require('tracing.trace_model.counter');
 tvcm.require('tracing.trace_model.slice');
@@ -100,3 +103,5 @@ tvcm.exportTo('tracing.test_utils', function() {
     findSliceNamed: findSliceNamed
   };
 });
+</script>
+
