--- a/trunk/trace_viewer/tracing/timeline_interest_range.html
+++ b/trunk/trace_viewer/tracing/timeline_interest_range.html
@@ -1,13 +1,16 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.require('tvcm.range');
 
 tvcm.exportTo('tracing', function() {
-
   /**
    * @constructor
    */
@@ -242,3 +245,5 @@ tvcm.exportTo('tracing', function() {
     TimelineInterestRange: TimelineInterestRange
   };
 });
+</script>
+
