--- a/trunk/trace_viewer/tracing/timeline_view_test.html
+++ b/trunk/trace_viewer/tracing/timeline_view_test.html
@@ -1,12 +1,16 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/timeline_view.html">
+<link rel="import" href="/tracing/trace_model.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.timeline_view');
-tvcm.require('tracing.trace_model');
 
 tvcm.unittest.testSuite('tracing.timeline_view_test', function() {
   var newSliceNamed = tracing.test_utils.newSliceNamed;
@@ -126,5 +130,6 @@ tvcm.unittest.testSuite('tracing.timeline_view_test', function() {
     view.timeline.addAllObjectsMatchingFilterToSelection(filter, selection);
     assertEquals(selection.length, 1);
   });
-
 });
+</script>
+
