Convert side_panel directory to HTML modules.
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/115130043

--- a/trunk/trace_viewer/tracing/side_panel/input_latency_test.html
+++ b/trunk/trace_viewer/tracing/side_panel/input_latency_test.html
@@ -1,13 +1,18 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/side_panel/input_latency.html">
+<link rel="import" href="/tracing/test_utils.html">
+
+<script>
 'use strict';
 
 tvcm.require('tracing.importer.trace_event_importer');
-tvcm.require('tracing.side_panel.input_latency');
 tvcm.require('tracing.trace_model');
-tvcm.require('tracing.test_utils');
 
 tvcm.unittest.testSuite('tracing.side_panel.input_latency_test', function() {
 
@@ -182,5 +187,6 @@ tvcm.unittest.testSuite('tracing.side_panel.input_latency_test', function() {
     panel.setBrushedIndices(2, 4);
     assertTrue(selectionChanged);
   });
-
 });
+</script>
+
