--- a/trunk/trace_viewer/tracing/side_panel/timeline_view_test.html
+++ b/trunk/trace_viewer/tracing/side_panel/timeline_view_test.html
@@ -1,10 +1,15 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/side_panel/timeline_view.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.side_panel.timeline_view');
 tvcm.require('tracing.trace_model');
 
 tvcm.testSuite('tracing.side_panel.timeline_view_test', function() {
@@ -102,3 +107,4 @@ tvcm.testSuite('tracing.side_panel.timeline_view_test', function() {
   return {
   };
 });
+</script>
