--- a/trunk/trace_viewer/tracing/side_panel/time_summary_test.html
+++ b/trunk/trace_viewer/tracing/side_panel/time_summary_test.html
@@ -1,12 +1,17 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/side_panel/time_summary.html">
+<link rel="import" href="/tracing/test_utils.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.side_panel.time_summary');
 tvcm.require('tracing.trace_model');
-tvcm.require('tracing.test_utils');
 
 tvcm.unittest.testSuite('tracing.side_panel.time_summary_test', function() {
   var newSliceNamed = tracing.test_utils.newSliceNamed;
@@ -195,3 +200,5 @@ tvcm.unittest.testSuite('tracing.side_panel.time_summary_test', function() {
     panel.style.border = '1px solid black';
   });
 });
+</script>
+
