--- a/trunk/trace_viewer/tracing/side_panel/timeline_view.html
+++ b/trunk/trace_viewer/tracing/side_panel/timeline_view.html
@@ -1,12 +1,16 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/side_panel/timeline_view.css">
+
+<script>
 'use strict';
 
 tvcm.require('tvcm.range');
-
-tvcm.requireStylesheet('tracing.side_panel.timeline_view');
 
 tvcm.exportTo('tracing', function() {
   /**
@@ -190,10 +194,10 @@ tvcm.exportTo('tracing', function() {
     }
   };
 
-
-
   return {
     TimelineViewSidePanel: TimelineViewSidePanel,
     TimelineViewSidePanelContainer: TimelineViewSidePanelContainer
   };
 });
+</script>
+
